[tool.poetry]
name = "joycontroller-py"
version = "0.1.0"
description = "Joystic controller test"
authors = ["Mihamina Rakotovazaha <r.miham@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "joycontroller_py"}]

[tool.poetry.dependencies]
python = "^3.8"
libevdev = "^0.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
